--- a/web/inlog.html
+++ b/web/inlog.html
@@ -27,20 +27,20 @@ and open the template in the editor.
 					<tr>
 						<td>
 							<p>Naam:</p>
-                                                        <input id=“Naam” type="text" name="voorNaam" class="Name">
+							<input id=“Naam” type="text" class="Name">
 						</td>
 						<td>
 							<p>Wachtwoord:</p>
-                                                        <input id=“Naam” type="password" name="wachtWoord" class="Name">
+							<input id=“Naam” type="password" class="Name">
 						</td>
 					</tr>
 				</table>
-			
+				
 				<div id="knop4">
 					<input type="submit" class="buttonInlog">
 				</div>
-			</form>
-			
+		</form>
+		<a href="gegevens.html">inlog</a>
                 <img src="https://www.avl.nl/media/8869707/logo-NL-Antoni-van-Leeuwenhoek_jpeg_grootformaat.jpg" id="avl">
             </div>
         </div>
