--- a/web/contact.html
+++ b/web/contact.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Second opinion</title>
-        <link rel="stylesheet" href="Style.css"> 
+        <link rel="stylesheet" href="Styles.css"> 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="script.js"></script>    
     </head>
