--- a/web/inlog.html
+++ b/web/inlog.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <title>Second opinion</title>
-        <link rel="stylesheet" href="Style.css"> 
+        <link rel="stylesheet" href="Styles.css"> 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="script.js"></script>    
     </head>
@@ -27,11 +27,11 @@ and open the template in the editor.
 					<tr>
 						<td>
 							<p>Naam:</p>
-							<input id=“Naam” type="text" class="Name">
+							<input id=“Naam” type="text" name="voorNaam" class="Name">
 						</td>
 						<td>
 							<p>Wachtwoord:</p>
-							<input id=“Naam” type="password" class="Name">
+							<input id=“Naam” type="password" name="wachtWoord" class="Name">
 						</td>
 					</tr>
 				</table>
