--- a/web/behandeling.html
+++ b/web/behandeling.html
@@ -7,7 +7,8 @@ and open the template in the editor.
 <html>
     <head>
         <title>Second opinion</title>
-        <link rel="stylesheet" href="Style.css"> 
+        
+        <link rel="stylesheet" href="Styles.css"> 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="script.js"></script>    
     </head>
