--- a/web/inlog.html
+++ b/web/inlog.html
@@ -27,11 +27,11 @@ and open the template in the editor.
 					<tr>
 						<td>
 							<p>Naam:</p>
-							<input id=“Naam” type="text" name="voorNaam" class="Name">
+							<input id=“voorNaam” type="text" name="voorNaam" class="Name">
 						</td>
 						<td>
 							<p>Wachtwoord:</p>
-							<input id=“Naam” type="password" name="wachtWoord" class="Name">
+							<input id=“wachtWoord” type="password" name="wachtWoord" class="Name">
 						</td>
 					</tr>
 				</table>
