Werkende inlog met bijbehorende pagina's. Moet nog wel kijken naar session id...

--- a/web/aanvraag.html
+++ b/web/aanvraag.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <title>Second opinion</title>
-        <link rel="stylesheet" href="Styles.css"> 
+        <link rel="stylesheet" href="Styless.css"> 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="script.js"></script>    
     </head>
@@ -56,3 +56,6 @@ and open the template in the editor.
         </div>
      </body>
 </html>
+
+
+
