--- a/web/arts.html
+++ b/web/arts.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <title>Second opinion</title>
-        <link rel="stylesheet" href="Styles.css"> 
+        <link rel="stylesheet" href="Styless.css"> 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="script.js"></script>    
     </head>
