Wijziging patient uitgebreid

--- a/web/inlog.html
+++ b/web/inlog.html
@@ -25,7 +25,7 @@ and open the template in the editor.
 				<table class="inlog">
 				
 					<tr>
-						<td>
+                                            <td style="width: 380px;">
 							<p>Naam:</p>
 							<input id=“voorNaam” type="text" name="voorNaam" class="Name">
 						</td>
@@ -36,8 +36,8 @@ and open the template in the editor.
 					</tr>
 				</table>
 				
-				<div id="knop4">
-					<input type="submit" class="buttonInlog">
+				<div id="knop6">
+					<input type="submit" value="Inloggen" class="buttonInlog">
 				</div>
 		</form>
                 <img src="https://www.avl.nl/media/8869707/logo-NL-Antoni-van-Leeuwenhoek_jpeg_grootformaat.jpg" id="avl">
