--- a/web/patientAanvraag.html
+++ b/web/patientAanvraag.html
@@ -16,7 +16,7 @@ and open the template in the editor.
         <div id="main">
             <div id="header" class="hoofd">
                 <a href="index.jsp">Terug</a>	
-                <h1>Aanvraagformulier patiënt</h1>
+                <h1>Aanvraagformulier pati&euml;nt</h1>
                 <h2>Zekerheid over uw diagnose binnen 72 uur</h2>
 
             </div>
@@ -30,7 +30,7 @@ and open the template in the editor.
 
                         <tr>
                             <td>
-                                <p class="p1">Patiëntgegevens</p>
+                                <p class="p1">Pati&euml;ntgegevens</p>
                             </td>
                             <td>
                                 <p>Achternaam:</p>
@@ -179,7 +179,7 @@ and open the template in the editor.
                                 <p>Afspraakbevestiging sturen aan</p>
                             </td>
                             <td>
-                                <input id=“Naam” type="checkbox"><label>Patiënt</label><br>
+                                <input id=“Naam” type="checkbox"><label>Pati&euml;nt</label><br>
                                 <input id=“Naam” type="checkbox"><label>Familie</label><br>
                                 <input id=“Naam” type="checkbox"><label>Verwijzer</label>
                             </td>
