Tijd wordt bijgehouden van aanpassing stadium

--- a/web/patientAanvraag.html
+++ b/web/patientAanvraag.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <div id="header" class="hoofd">
                 <a href="index.jsp">Terug</a>	
                 <h1>Aanvraagformulier pati&euml;nt</h1>
-                <h2>Zekerheid over uw diagnose binnen 72 uur</h2>
+<!--                <h2>Zekerheid over uw diagnose binnen 72 uur</h2>-->
 
             </div>
 
@@ -39,7 +39,7 @@ and open the template in the editor.
                                 <input id=“aNaam” type="text" class="input" name="na" onfocusout="naam(this, naamReg)">
                             </td>
                         </tr>
-                        <hr id="lijn">
+<!--                        <hr id="lijn">-->
 
                         <tr>
                             <td>
@@ -166,6 +166,49 @@ and open the template in the editor.
                             </td>
                         </tr>
                         <tr>
+                            <td>
+                            </td>
+                            <td>
+                                <p>Huidig ziekenhuis</p>
+                            </td>
+                            <td>
+                                <input id=“Naam” type="text" class="input" name="hZiekenhuis" onfocusout="naam(this, naamReg)">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                            </td>
+                            <td>
+                                <p>Huidige behandelaar</p>
+                            </td>
+                            <td>
+                                <input id=“Naam” type="text" class="input" name="hBehandelaar" onfocusout="naam(this, naamReg)">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                            </td>
+                            <td>
+                                <p>Diagnose/ Verdenking:</p>
+                            </td>
+                            <td>
+                                <select class="input" name="verdenking">
+                                    <option>Mamma</option>
+                                    <option>Dermatologie</option>
+                                    <option>Gastro-Enterologie</option>
+                                    <option>Gynaecologie</option>
+                                    <option>Interne</option>
+                                    <option>hematologie</option>
+                                    <option>Hoofd-hals</option>
+                                    <option>Long</option>
+                                    <option>Urologie</option>
+                                    <option>Urologie - PKNW</option>
+                                    <option>Wekedelen</option>
+                                    <option>Overig</option>
+                                </select>
+                            </td>
+                        </tr>
+<!--                        <tr>
                             <td colspan="3">
                                 <hr id="lijn">	
                             </td>
@@ -256,7 +299,7 @@ and open the template in the editor.
                             <td>
                                 <input id=“Naam” type="file" class="input">
                             </td>
-                        </tr>
+                        </tr>-->
                         <tr>
                             <td colspan="3">
                                 <hr id="lijn">
