--- a/web/patientAanvraag.html
+++ b/web/patientAanvraag.html
@@ -17,7 +17,6 @@ and open the template in the editor.
             <div id="header" class="hoofd">
                 <a href="index.jsp">Terug</a>	
                 <h1>Aanvraagformulier pati&euml;nt</h1>
-<!--                <h2>Zekerheid over uw diagnose binnen 72 uur</h2>-->
 
             </div>
 
@@ -187,7 +186,7 @@ and open the template in the editor.
                                     <option>Gastro-Enterologie</option>
                                     <option>Gynaecologie</option>
                                     <option>Interne</option>
-                                    <option>hematologie</option>
+                                    <option>Hematologie</option>
                                     <option>Hoofd-hals</option>
                                     <option>Long</option>
                                     <option>Urologie</option>
@@ -219,7 +218,17 @@ and open the template in the editor.
                             <td>
                                 <input id=“wwB” type="password" class="input" name="wwB" onfocusout="validateWachtwoord()">
                             </td>
-<!--                            <td></td>-->
+                        </tr>
+                        <tr>
+                            <td>
+                                <p id="toestemmingGegeven" class="reden">Toestemming geven in<br>verplicht voor het<br>aanvragen van een <br>second opinion.</p>
+                            </td>
+                            <td>
+                                <p>Ik geef het AVL toestemming mijn <br> medisch dossier op te halen uit mijn<br> huidige ziekenhuis</p>
+                            </td>
+                            <td>
+                                <input  type="checkbox" class="input" name="toestemming" value="ander">
+                            </td>
                         </tr>
                         <tr>
                             <td colspan="3">
