SO aanvragen werkt weer en uitbreiding patienten

--- a/web/patientAanvraag.html
+++ b/web/patientAanvraag.html
@@ -150,7 +150,7 @@ and open the template in the editor.
                                 <p>Reeds in het AVL geweest?</p>
                             </td>
                             <td>
-                                <input  type="checkbox" class="input" name="geweest">
+                                <input  type="checkbox" class="input" value="ja" name="geweest">
                             </td>
                         </tr>
                         <tr>
